--- a/tool.properties
+++ b/tool.properties
@@ -2,7 +2,7 @@ name=Seekprog
 authors=[kgtkr](https://github.com/kgtkr)
 category=Other
 url=https://github.com/kgtkr/seekprog
-sentence=TODO
+sentence=Tools for research adding seek bars to sketches
 paragraph=
 version=1
 prettyVersion=1.0.0
