--- a/tool.properties
+++ b/tool.properties
@@ -1,7 +1,7 @@
-name=Seekprog
+name=Repro4PDE
 authors=[kgtkr](https://github.com/kgtkr)
 category=Other
-url=https://github.com/kgtkr/seekprog
+url=https://github.com/kgtkr/repro4pde
 sentence=Tools for research adding seek bars to sketches
 paragraph=
 version=1
