ツールの説明改善

--- a/tool.properties
+++ b/tool.properties
@@ -2,9 +2,9 @@ name=Repro4PDE
 authors=[kgtkr](https://github.com/kgtkr)
 category=Other
 url=https://github.com/kgtkr/repro4pde
-sentence=Tools for research adding seek bars to sketches
-paragraph=
+sentence=Provides hot reload
+paragraph=This tool is alpha. There are some limitations, so please see the GitHub page for details.
 version=1
 prettyVersion=1.0.0
-minRevision=0
+minRevision=1285
 maxRevision=0
